# distrans

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  flake.nix  fly.toml  release-plz.toml
.github/workflows/: build-setup.yml  build-setup.yml.todo  flake.yml  release-plz.yml  release.yml  test.yml
discovery-test/: Cargo.toml
discovery-test/src/: main.rs
discovery-test/wix/: main.wxs
distrans-cli/: CHANGELOG.md  Cargo.toml
distrans-cli/src/: app.rs  cli.rs  lib.rs
distrans-cli/wix/: main.wxs
distrans-fileindex/: CHANGELOG.md  Cargo.toml
distrans-fileindex/src/: error.rs  lib.rs
distrans-peer/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
distrans-peer/proto/: distrans.capnp
distrans-peer/src/: error.rs  fetcher.rs  lib.rs  seeder.rs  veilid_config.rs
distrans-peer/src/peer/: mod.rs  observable.rs  resilient_peer.rs  veilid.rs  veilid_peer.rs
distrans-peer/src/proto/: distrans_capnp.rs  mod.rs
distrans-peer/src/tests/: mod.rs  stub_peer.rs
distrans-peer/stress-obs/: docker-compose.yml
distrans-peer/stress-obs/prometheus/: prometheus.yml
docs/: dht_architecture.drawio
examples/fly.io/: Dockerfile
media/: example-fetch-ascii.cast  example-seed-ascii.cast
proto/: distrans.capnp
scripts/: damage_file.sh  e2e_seed_fetch.sh  install_tools.sh
src/: app.rs  cli.rs  lib.rs
src/proto/: distrans_capnp.rs
stigmerge/: CHANGELOG.md  Cargo.toml
stigmerge-fileindex/: CHANGELOG.md  Cargo.toml
stigmerge-fileindex/src/: lib.rs
stigmerge-peer/: CHANGELOG.md  Cargo.toml  build.rs
stigmerge-peer/proto/: stigmerge.capnp
stigmerge-peer/src/: error.rs  fetcher.rs  lib.rs  seeder.rs  tracker.rs  veilid_config.rs
stigmerge-peer/src/peer/: mod.rs  observable.rs  veilid.rs
stigmerge-peer/src/proto/: block_request.rs  distrans_capnp.rs  header.rs  index.rs  mod.rs  stigmerge_capnp.rs
stigmerge-peer/src/tests/: stub_peer.rs
stigmerge-peer/src/tracker/: mod.rs  share_resolver.rs
stigmerge/src/: app.rs  cli.rs  lib.rs
stigmerge/wix/: main.wxs
stress-obs/: docker-compose.yml
tools/: install_macos.sh  install_ubuntu.sh  install_windows.ps1
wix/: main.wxs
