[workspace]
resolver = "2"
members = [
  "distrans-fileindex",
  "distrans-peer",
  "distrans-cli",
]

[workspace.package]
authors = ["Casey Marshall <me@cmars.tech>"]
documentation = "https://github.com/cmars/distrans"
edition = "2021"
homepage = "https://github.com/cmars/distrans"
license = "MPL-2.0"
repository = "https://github.com/cmars/distrans"
version = "0.3.5"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Where to host releases
hosting = "github"
# A GitHub repo to push Homebrew formulas to
tap = "cmars/homebrew-tap"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "npm"]
# Whether to install an updater program
install-updater = false

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
sha2 = { version = "0.10.8", features = ["asm"] }
tokio = { version = "1.37", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "attributes"] }
veilid-core = "0.3.2"

[profile.release]
strip = true
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
