[workspace]
resolver = "2"
members = [
    "distrans-fileindex",
    "distrans-peer",
    "distrans-cli",
    "discovery-test",
]

[workspace.package]
authors = ["Casey Marshall <me@cmars.tech>"]
documentation = "https://github.com/cmars/distrans"
edition = "2021"
homepage = "https://github.com/cmars/distrans"
license = "MPL-2.0"
repository = "https://github.com/cmars/distrans"
version = "0.3.19"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
backoff = { version = "0.4", features = ["tokio"] }
sha2 = { version = "0.10", features = ["asm"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
veilid-core = { version = "0.4.3" }

[profile.release]
strip = true
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
