[package]
name = "discovery-test"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sha2 = { workspace = true }
anyhow = { version = "1.0.95", features = ["std", "backtrace"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
distrans_peer = { path = "../distrans-peer" }
ed25519-dalek = "2.1.1"
hex = "0.4"
rand = "0.9"
tempfile = "3.10"
tokio = { workspace = true }
tokio-util = "0.7"
veilid-core = { workspace = true }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
