[package]
name = "discovery-test"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
distrans_peer = { path = "../distrans-peer" }
ed25519-dalek = "2.1.1"
hex = "0.4"
tokio = { workspace = true }
veilid-core = { workspace = true }
