[package]
name = "discovery-test"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.wix]
upgrade-guid = "AC324331-633A-4FE0-A583-5DC23213AA63"
path-guid = "2DFEAD38-9391-4083-9631-FB9510E2581B"
license = false
eula = false

[dependencies]
anyhow = { version = "1.0.95", features = ["std", "backtrace"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
distrans_peer = { path = "../distrans-peer" }
ed25519-dalek = "2.1.1"
hex = "0.4"
rand = "0.9"
tempfile = "3.10"
tokio = { workspace = true }
tokio-util = { workspace = true }
veilid-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"
