[package]
name = "distrans_fileindex"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Distrans file indexing"
documentation = "https://docs.rs/distrans_fileindex"

[dependencies]
flume = "0.11"
rust-crypto = "0.2"
thiserror = "1.0"
tokio = { version = "1.33", features = ["fs", "io-util", "macros", "rt"] }

[dev-dependencies]
hex-literal = "0.4"
tempfile = "3.10"
