[package]
name = "distrans_fileindex"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Distrans file indexing"
documentation = "https://docs.rs/distrans_fileindex"

[lib]
name = "distrans_fileindex"
path = "src/lib.rs"

[dependencies]
flume = "0.11"
thiserror = "1.0"
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"

[dev-dependencies]
hex-literal = "0.4"
tempfile = "3.10"
