[package]
name = "distrans_peer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
documentation = "https://docs.rs/distrans-peer"
description = "Distrans p2p protocol and agent components"
build = "build.rs"

[lib]
name = "distrans_peer"
path = "src/lib.rs"

[dependencies]
capnp = "0.18"
distrans_fileindex = {path = "../distrans-fileindex"}
flume = "0.11"
path-absolutize = "3.1.1"
thiserror = "1.0"
tokio = "1.33"
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log", "attributes"] }
veilid-core = "0.2.5"

[build-dependencies]
capnpc = "0.18"

[dev-dependencies]
tempfile = "3.10"
