[package]
name = "distrans_peer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
documentation = "https://docs.rs/distrans-peer"
description = "Distrans p2p protocol and agent components"
build = "build.rs"

[lib]
name = "distrans_peer"
path = "src/lib.rs"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
capnp = "0.19.3"
distrans_fileindex = { version = "0", path = "../distrans-fileindex" }
flume = "0.11"
hex = "0.4.3"
path-absolutize = "3.1.1"
thiserror = "1.0.59"
tokio = { workspace = true }
tokio-util = "0.7.10"
tracing = { version = "0.1", features = ["log", "attributes"] }
veilid-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10.8"

[build-dependencies]
capnpc = "0.18"
hex = "0.4.3"

[target.'cfg(unix)'.build-dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.10.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
