[package]
name = "stigmerge_fileindex"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "stigmerge file indexing"
documentation = "https://docs.rs/stigmerge_fileindex"

[lib]
name = "stigmerge_fileindex"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
flume = "0.11"
num_cpus = "1.16"
thiserror = "2.0"
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10.8"

[dev-dependencies]
hex-literal = "0.4"
tempfile = "3.10"
