[package]
name = "stigmerge_peer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
documentation = "https://docs.rs/stigmerge-peer"
description = "stigmerge p2p protocol and agent components"
build = "build.rs"

[lib]
name = "stigmerge_peer"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
capnp = "0.20"
stigmerge_fileindex = { version = "0", path = "../stigmerge-fileindex" }
flume = "0.11"
hex = "0.4"
path-absolutize = "3.1"
thiserror = "2.0"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
veilid-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"

[build-dependencies]
capnpc = "0.20"
hex = "0.4"

[target.'cfg(unix)'.build-dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
